added global pointer for buttons

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,8 +6,13 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --font-sans:
+    ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-mono:
+    ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
+    "Courier New", monospace;
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -71,40 +76,45 @@
 :root {
   --radius: 0.625rem;
   --background: oklch(0.9904 0.0148 94.1935);
-  --foreground: oklch(0.3214 0.0503 84.8490);
-  --card: oklch(1.0000 0 0);
-  --card-foreground: oklch(0.3214 0.0503 84.8490);
-  --popover: oklch(1.0000 0 0);
-  --popover-foreground: oklch(0.3214 0.0503 84.8490);
-  --primary: oklch(0.7212 0.1205 80.3500);
-  --primary-foreground: oklch(0.3214 0.0503 84.8490);
-  --secondary: oklch(0.9610 0.0205 91.5836);
-  --secondary-foreground: oklch(0.3214 0.0503 84.8490);
-  --muted: oklch(0.9610 0.0205 91.5836);
+  --foreground: oklch(0.3214 0.0503 84.849);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.3214 0.0503 84.849);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.3214 0.0503 84.849);
+  --primary: oklch(0.7212 0.1205 80.35);
+  --primary-foreground: oklch(0.3214 0.0503 84.849);
+  --secondary: oklch(0.961 0.0205 91.5836);
+  --secondary-foreground: oklch(0.3214 0.0503 84.849);
+  --muted: oklch(0.961 0.0205 91.5836);
   --muted-foreground: oklch(0.5495 0.0296 90.1995);
-  --accent: oklch(0.9610 0.0205 91.5836);
-  --accent-foreground: oklch(0.3214 0.0503 84.8490);
+  --accent: oklch(0.961 0.0205 91.5836);
+  --accent-foreground: oklch(0.3214 0.0503 84.849);
   --destructive: oklch(0.6501 0.2008 24.9745);
   --border: oklch(0.9402 0.0153 90.2382);
   --input: oklch(0.9402 0.0153 90.2382);
-  --ring: oklch(0.7212 0.1205 80.3500);
+  --ring: oklch(0.7212 0.1205 80.35);
   --chart-1: oklch(0.6999 0.1004 260.4397);
   --chart-2: oklch(0.6996 0.1001 150.0301);
   --chart-3: oklch(0.7491 0.1499 79.7383);
   --chart-4: oklch(0.8494 0.1495 99.6957);
   --chart-5: oklch(0.7004 0.1495 25.0456);
   --sidebar: oklch(0.9806 0.0187 96.8588);
-  --sidebar-foreground: oklch(0.3214 0.0503 84.8490);
-  --sidebar-primary: oklch(0.7212 0.1205 80.3500);
-  --sidebar-primary-foreground: oklch(0.3214 0.0503 84.8490);
-  --sidebar-accent: oklch(0.9610 0.0205 91.5836);
-  --sidebar-accent-foreground: oklch(0.3214 0.0503 84.8490);
+  --sidebar-foreground: oklch(0.3214 0.0503 84.849);
+  --sidebar-primary: oklch(0.7212 0.1205 80.35);
+  --sidebar-primary-foreground: oklch(0.3214 0.0503 84.849);
+  --sidebar-accent: oklch(0.961 0.0205 91.5836);
+  --sidebar-accent-foreground: oklch(0.3214 0.0503 84.849);
   --sidebar-border: oklch(0.9402 0.0153 90.2382);
-  --sidebar-ring: oklch(0.7212 0.1205 80.3500);
+  --sidebar-ring: oklch(0.7212 0.1205 80.35);
   --destructive-foreground: oklch(0.9904 0.0148 94.1935);
-  --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  --font-sans:
+    ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --font-mono:
+    ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
+    "Courier New", monospace;
   --shadow-color: oklch(0 0 0);
   --shadow-opacity: 0.1;
   --shadow-blur: 3px;
@@ -115,11 +125,15 @@
   --spacing: 0.25rem;
   --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
   --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
-  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
-  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
-  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 2px 4px -1px hsl(0 0% 0% / 0.10);
-  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 4px 6px -1px hsl(0 0% 0% / 0.10);
-  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
+  --shadow-sm:
+    0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
+  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
+  --shadow-md:
+    0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 2px 4px -1px hsl(0 0% 0% / 0.1);
+  --shadow-lg:
+    0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 4px 6px -1px hsl(0 0% 0% / 0.1);
+  --shadow-xl:
+    0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 8px 10px -1px hsl(0 0% 0% / 0.1);
   --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
   --tracking-normal: 0em;
 }
@@ -127,9 +141,9 @@
 .dark {
   --background: oklch(0.2094 0.0042 84.5894);
   --foreground: oklch(0.9605 0.0108 95.1644);
-  --card: oklch(0.2485 0.0080 84.5923);
+  --card: oklch(0.2485 0.008 84.5923);
   --card-foreground: oklch(0.9605 0.0108 95.1644);
-  --popover: oklch(0.2485 0.0080 84.5923);
+  --popover: oklch(0.2485 0.008 84.5923);
   --popover-foreground: oklch(0.9605 0.0108 95.1644);
   --primary: oklch(0.7506 0.1302 80.0245);
   --primary-foreground: oklch(0.2489 0.0189 88.7852);
@@ -158,9 +172,14 @@
   --sidebar-ring: oklch(0.7506 0.1302 80.0245);
   --destructive-foreground: oklch(0.2489 0.0189 88.7852);
   --radius: 0.625rem;
-  --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  --font-sans:
+    ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --font-mono:
+    ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
+    "Courier New", monospace;
   --shadow-color: oklch(0 0 0);
   --shadow-opacity: 0.1;
   --shadow-blur: 3px;
@@ -171,11 +190,15 @@
   --spacing: 0.25rem;
   --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
   --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
-  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
-  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
-  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 2px 4px -1px hsl(0 0% 0% / 0.10);
-  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 4px 6px -1px hsl(0 0% 0% / 0.10);
-  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
+  --shadow-sm:
+    0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
+  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
+  --shadow-md:
+    0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 2px 4px -1px hsl(0 0% 0% / 0.1);
+  --shadow-lg:
+    0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 4px 6px -1px hsl(0 0% 0% / 0.1);
+  --shadow-xl:
+    0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 8px 10px -1px hsl(0 0% 0% / 0.1);
   --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
 }
 
@@ -186,5 +209,8 @@
   body {
     @apply bg-background text-foreground;
     letter-spacing: var(--tracking-normal);
+  }
+  button {
+    @apply cursor-pointer;
   }
 }
