--- a/app/globals.css
+++ b/app/globals.css
@@ -70,113 +70,113 @@
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(0.9904 0.0148 94.1935);
-  --foreground: oklch(0.3214 0.0503 84.8490);
+  --background: oklch(0.9915 0.0057 84.5659);
+  --foreground: oklch(0.2438 0.0272 58.6175);
   --card: oklch(1.0000 0 0);
-  --card-foreground: oklch(0.3214 0.0503 84.8490);
+  --card-foreground: oklch(0.2438 0.0272 58.6175);
   --popover: oklch(1.0000 0 0);
-  --popover-foreground: oklch(0.3214 0.0503 84.8490);
-  --primary: oklch(0.7212 0.1205 80.3500);
-  --primary-foreground: oklch(0.3214 0.0503 84.8490);
-  --secondary: oklch(0.9610 0.0205 91.5836);
-  --secondary-foreground: oklch(0.3214 0.0503 84.8490);
-  --muted: oklch(0.9610 0.0205 91.5836);
-  --muted-foreground: oklch(0.5495 0.0296 90.1995);
-  --accent: oklch(0.9610 0.0205 91.5836);
-  --accent-foreground: oklch(0.3214 0.0503 84.8490);
-  --destructive: oklch(0.6501 0.2008 24.9745);
-  --border: oklch(0.9402 0.0153 90.2382);
-  --input: oklch(0.9402 0.0153 90.2382);
-  --ring: oklch(0.7212 0.1205 80.3500);
-  --chart-1: oklch(0.6999 0.1004 260.4397);
-  --chart-2: oklch(0.6996 0.1001 150.0301);
-  --chart-3: oklch(0.7491 0.1499 79.7383);
-  --chart-4: oklch(0.8494 0.1495 99.6957);
-  --chart-5: oklch(0.7004 0.1495 25.0456);
-  --sidebar: oklch(0.9806 0.0187 96.8588);
-  --sidebar-foreground: oklch(0.3214 0.0503 84.8490);
-  --sidebar-primary: oklch(0.7212 0.1205 80.3500);
-  --sidebar-primary-foreground: oklch(0.3214 0.0503 84.8490);
-  --sidebar-accent: oklch(0.9610 0.0205 91.5836);
-  --sidebar-accent-foreground: oklch(0.3214 0.0503 84.8490);
-  --sidebar-border: oklch(0.9402 0.0153 90.2382);
-  --sidebar-ring: oklch(0.7212 0.1205 80.3500);
-  --destructive-foreground: oklch(0.9904 0.0148 94.1935);
+  --popover-foreground: oklch(0.2438 0.0272 58.6175);
+  --primary: oklch(0.7907 0.1604 72.9935);
+  --primary-foreground: oklch(0.1785 0.0193 54.9389);
+  --secondary: oklch(0.9670 0.0164 91.5509);
+  --secondary-foreground: oklch(0.2703 0.0231 60.8880);
+  --muted: oklch(0.9638 0.0095 93.5690);
+  --muted-foreground: oklch(0.5586 0.0232 57.7817);
+  --accent: oklch(0.9773 0.0183 86.1458);
+  --accent-foreground: oklch(0.2703 0.0231 60.8880);
+  --destructive: oklch(0.6396 0.2254 25.0370);
+  --border: oklch(0.9309 0.0083 91.4863);
+  --input: oklch(0.9309 0.0083 91.4863);
+  --ring: oklch(0.7411 0.1627 67.8989);
+  --chart-1: oklch(0.7411 0.1627 67.8989);
+  --chart-2: oklch(0.6631 0.1139 207.6337);
+  --chart-3: oklch(0.6105 0.1897 330.1033);
+  --chart-4: oklch(0.5906 0.1608 144.9435);
+  --chart-5: oklch(0.6303 0.1900 40.0697);
+  --sidebar: oklch(0.9855 0.0057 84.5660);
+  --sidebar-foreground: oklch(0.2438 0.0272 58.6175);
+  --sidebar-primary: oklch(0.7907 0.1604 72.9935);
+  --sidebar-primary-foreground: oklch(0.1785 0.0193 54.9389);
+  --sidebar-accent: oklch(0.9670 0.0164 91.5509);
+  --sidebar-accent-foreground: oklch(0.2703 0.0231 60.8880);
+  --sidebar-border: oklch(0.9309 0.0083 91.4863);
+  --sidebar-ring: oklch(0.7411 0.1627 67.8989);
+  --destructive-foreground: oklch(0.9902 0.0039 106.4713);
   --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
   --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  --shadow-color: oklch(0 0 0);
+  --shadow-color: #000000;
   --shadow-opacity: 0.1;
   --shadow-blur: 3px;
   --shadow-spread: 0px;
-  --shadow-offset-x: 0;
-  --shadow-offset-y: 1px;
+  --shadow-offset-x: 1px;
+  --shadow-offset-y: 2px;
   --letter-spacing: 0em;
   --spacing: 0.25rem;
-  --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
-  --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
-  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
-  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
-  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 2px 4px -1px hsl(0 0% 0% / 0.10);
-  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 4px 6px -1px hsl(0 0% 0% / 0.10);
-  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
-  --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
+  --shadow-2xs: 1px 2px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-xs: 1px 2px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-sm: 1px 2px 3px 0px hsl(0 0% 0% / 0.10), 1px 1px 2px -1px hsl(0 0% 0% / 0.10);
+  --shadow: 1px 2px 3px 0px hsl(0 0% 0% / 0.10), 1px 1px 2px -1px hsl(0 0% 0% / 0.10);
+  --shadow-md: 1px 2px 3px 0px hsl(0 0% 0% / 0.10), 1px 2px 4px -1px hsl(0 0% 0% / 0.10);
+  --shadow-lg: 1px 2px 3px 0px hsl(0 0% 0% / 0.10), 1px 4px 6px -1px hsl(0 0% 0% / 0.10);
+  --shadow-xl: 1px 2px 3px 0px hsl(0 0% 0% / 0.10), 1px 8px 10px -1px hsl(0 0% 0% / 0.10);
+  --shadow-2xl: 1px 2px 3px 0px hsl(0 0% 0% / 0.25);
   --tracking-normal: 0em;
 }
 
 .dark {
-  --background: oklch(0.2094 0.0042 84.5894);
-  --foreground: oklch(0.9605 0.0108 95.1644);
-  --card: oklch(0.2485 0.0080 84.5923);
-  --card-foreground: oklch(0.9605 0.0108 95.1644);
-  --popover: oklch(0.2485 0.0080 84.5923);
-  --popover-foreground: oklch(0.9605 0.0108 95.1644);
-  --primary: oklch(0.7506 0.1302 80.0245);
-  --primary-foreground: oklch(0.2489 0.0189 88.7852);
-  --secondary: oklch(0.3211 0.0107 91.6648);
-  --secondary-foreground: oklch(0.9605 0.0108 95.1644);
-  --muted: oklch(0.3211 0.0107 91.6648);
-  --muted-foreground: oklch(0.6801 0.0107 87.4953);
-  --accent: oklch(0.3211 0.0107 91.6648);
-  --accent-foreground: oklch(0.9605 0.0108 95.1644);
-  --destructive: oklch(0.6809 0.2075 24.8129);
-  --border: oklch(0.3211 0.0107 91.6648);
-  --input: oklch(0.3211 0.0107 91.6648);
-  --ring: oklch(0.7506 0.1302 80.0245);
-  --chart-1: oklch(0.6999 0.1004 260.4397);
-  --chart-2: oklch(0.6996 0.1001 150.0301);
-  --chart-3: oklch(0.7491 0.1499 79.7383);
-  --chart-4: oklch(0.8494 0.1495 99.6957);
-  --chart-5: oklch(0.7004 0.1495 25.0456);
-  --sidebar: oklch(0.2094 0.0042 84.5894);
-  --sidebar-foreground: oklch(0.9605 0.0108 95.1644);
-  --sidebar-primary: oklch(0.7506 0.1302 80.0245);
-  --sidebar-primary-foreground: oklch(0.2489 0.0189 88.7852);
-  --sidebar-accent: oklch(0.3211 0.0107 91.6648);
-  --sidebar-accent-foreground: oklch(0.9605 0.0108 95.1644);
-  --sidebar-border: oklch(0.3211 0.0107 91.6648);
-  --sidebar-ring: oklch(0.7506 0.1302 80.0245);
-  --destructive-foreground: oklch(0.2489 0.0189 88.7852);
+  --background: oklch(0.1688 0.0044 84.5930);
+  --foreground: oklch(0.9848 0.0054 95.0983);
+  --card: oklch(0.1961 0.0042 84.5908);
+  --card-foreground: oklch(0.9848 0.0054 95.0983);
+  --popover: oklch(0.2240 0.0037 48.5547);
+  --popover-foreground: oklch(0.9848 0.0054 95.0983);
+  --primary: oklch(0.8124 0.1704 76.3908);
+  --primary-foreground: oklch(0.1586 0.0156 74.0285);
+  --secondary: oklch(0.2542 0.0072 67.4969);
+  --secondary-foreground: oklch(0.9698 0.0054 95.0995);
+  --muted: oklch(0.2565 0.0040 84.5842);
+  --muted-foreground: oklch(0.6807 0.0125 84.5877);
+  --accent: oklch(0.2986 0.0098 80.6526);
+  --accent-foreground: oklch(0.9698 0.0054 95.0995);
+  --destructive: oklch(0.6763 0.2115 24.8106);
+  --border: oklch(0.2901 0.0061 78.2320);
+  --input: oklch(0.3413 0.0074 84.5908);
+  --ring: oklch(0.7038 0.1569 65.8263);
+  --chart-1: oklch(0.7998 0.1706 72.7466);
+  --chart-2: oklch(0.7328 0.1258 207.4607);
+  --chart-3: oklch(0.7403 0.2093 330.1870);
+  --chart-4: oklch(0.7190 0.1696 144.9133);
+  --chart-5: oklch(0.7209 0.1826 43.4867);
+  --sidebar: oklch(0.1916 0.0043 84.5912);
+  --sidebar-foreground: oklch(0.9848 0.0054 95.0983);
+  --sidebar-primary: oklch(0.8124 0.1704 76.3908);
+  --sidebar-primary-foreground: oklch(0.1586 0.0156 74.0285);
+  --sidebar-accent: oklch(0.2542 0.0072 67.4969);
+  --sidebar-accent-foreground: oklch(0.9848 0.0054 95.0983);
+  --sidebar-border: oklch(0.2901 0.0061 78.2320);
+  --sidebar-ring: oklch(0.6025 0.1363 63.9302);
+  --destructive-foreground: oklch(0.9787 0.0095 93.5671);
   --radius: 0.625rem;
   --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
   --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  --shadow-color: oklch(0 0 0);
+  --shadow-color: #000000;
   --shadow-opacity: 0.1;
   --shadow-blur: 3px;
   --shadow-spread: 0px;
-  --shadow-offset-x: 0;
-  --shadow-offset-y: 1px;
+  --shadow-offset-x: 1px;
+  --shadow-offset-y: 2px;
   --letter-spacing: 0em;
   --spacing: 0.25rem;
-  --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
-  --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
-  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
-  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
-  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 2px 4px -1px hsl(0 0% 0% / 0.10);
-  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 4px 6px -1px hsl(0 0% 0% / 0.10);
-  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
-  --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
+  --shadow-2xs: 1px 2px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-xs: 1px 2px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-sm: 1px 2px 3px 0px hsl(0 0% 0% / 0.10), 1px 1px 2px -1px hsl(0 0% 0% / 0.10);
+  --shadow: 1px 2px 3px 0px hsl(0 0% 0% / 0.10), 1px 1px 2px -1px hsl(0 0% 0% / 0.10);
+  --shadow-md: 1px 2px 3px 0px hsl(0 0% 0% / 0.10), 1px 2px 4px -1px hsl(0 0% 0% / 0.10);
+  --shadow-lg: 1px 2px 3px 0px hsl(0 0% 0% / 0.10), 1px 4px 6px -1px hsl(0 0% 0% / 0.10);
+  --shadow-xl: 1px 2px 3px 0px hsl(0 0% 0% / 0.10), 1px 8px 10px -1px hsl(0 0% 0% / 0.10);
+  --shadow-2xl: 1px 2px 3px 0px hsl(0 0% 0% / 0.25);
 }
 
 @layer base {
